--- a/index.html
+++ b/index.html
@@ -8,11 +8,23 @@
     <meta name="description"
         content="Powered by tye Helium Blockchain, The People's Network represents a paradigm shift for decentralized wireless infrastructure." />
     <title>Hélium - Introducing The People's Network</title>
-    <link rel="shortcut icon" href="./img/favicon.png" />
+    <link rel="shortcut icon" href="./assets/img/favicon.png" />
+    <link rel="stylesheet" href="./assets/style/style.css" />
 </head>
 
 <body>
-
+    <nav>
+        <img src="./assets/svg/logosymbol.svg" alt="logosymbol" class="logosymbol" />
+        <p><a href="#">Chapter 2</a></p>
+        <ul>
+            <li><a href="#">Build</a></li>
+            <li><a href="#">Use</a></li>
+            <li><a href="#">Resources</a></li>
+            <li><a href="#">Ecosystem</a></li>
+        </ul>
+        <p><a href="#">Cellular Summer</a></p>
+        <img src="./assets/svg/globe.svg" alt="globe" class="globe" />
+    </nav>
 </body>
 
 </html>
