Tentative de JavaScript sur la navbar...

--- a/index.html
+++ b/index.html
@@ -17,14 +17,24 @@
         <img src="./assets/svg/logosymbol.svg" alt="logosymbol" class="logosymbol" />
         <p><a href="#">Chapter 2</a></p>
         <ul>
-            <li><a href="#">Build</a></li>
-            <li><a href="#">Use</a></li>
-            <li><a href="#">Resources</a></li>
+            <li><a href="#">Build <img src="./assets/svg/navarrow.svg" alt="Fleche vers le bas" class="build" /></a>
+            </li>
+            <li><a href="#">Use <img src="./assets/svg/navarrow.svg" alt="Fleche vers le bas" class="use" /></a></li>
+            <li><a href="#">Resources <img src="./assets/svg/navarrow.svg" alt="Fleche vers le bas"
+                        class="resources" /></a></li>
             <li><a href="#">Ecosystem</a></li>
         </ul>
         <p><a href="#">Cellular Summer</a></p>
         <img src="./assets/svg/globe.svg" alt="globe" class="globe" />
+
+        <div class="build-nav">
+            <div class="hotspots">
+                <h3>Hotspots</h3>
+            </div>
+        </div>
     </nav>
+
+    <script src="./assets/scripts/index.js"></script>
 </body>
 
 </html>
