Menu déroulant s'affiche (JavaScript)

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <img src="./assets/svg/logosymbol.svg" alt="logosymbol" class="logosymbol" />
         <p><a href="#">Chapter 2</a></p>
         <ul>
-            <li><a href="#">Build <img src="./assets/svg/navarrow.svg" alt="Fleche vers le bas" class="build" /></a>
+            <li class="build"><a href="#">Build <img src="./assets/svg/navarrow.svg" alt="Fleche vers le bas" /></a>
             </li>
             <li><a href="#">Use <img src="./assets/svg/navarrow.svg" alt="Fleche vers le bas" class="use" /></a></li>
             <li><a href="#">Resources <img src="./assets/svg/navarrow.svg" alt="Fleche vers le bas"
@@ -28,8 +28,21 @@
         <img src="./assets/svg/globe.svg" alt="globe" class="globe" />
 
         <div class="build-nav">
-            <div class="hotspots">
+            <div class="build-nav-content">
                 <h3>Hotspots</h3>
+                <p>Build the network and mine HNT</p>
+            </div>
+            <div class="build-nav-content">
+                <h3>Stake</h3>
+                <p>Eun a Validator and secure the Network</p>
+            </div>
+            <div class="build-nav-content">
+                <h3>Token</h3>
+                <p>Explore HNT and Data Credits</p>
+            </div>
+            <div class="build-nav-content">
+                <h3>Helium 5G</h3>
+                <p>Deploy 5GCoverage on Helium</p>
             </div>
         </div>
     </nav>
