Amélioration nav-bar javascript

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         <ul>
             <li class="build"><a href="#">Build <img src="./assets/svg/navarrow.svg" alt="Fleche vers le bas" /></a>
             </li>
-            <li><a href="#">Use <img src="./assets/svg/navarrow.svg" alt="Fleche vers le bas" class="use" /></a></li>
-            <li><a href="#">Resources <img src="./assets/svg/navarrow.svg" alt="Fleche vers le bas"
-                        class="resources" /></a></li>
+            <li class="use"><a href="#">Use <img src="./assets/svg/navarrow.svg" alt="Fleche vers le bas" /></a></li>
+            <li class="resources"><a href="#">Resources <img src="./assets/svg/navarrow.svg"
+                        alt="Fleche vers le bas" /></a></li>
             <li><a href="#">Ecosystem</a></li>
         </ul>
         <p><a href="#">Cellular Summer</a></p>
@@ -43,6 +43,25 @@
             <div class="build-nav-content">
                 <h3>Helium 5G</h3>
                 <p>Deploy 5GCoverage on Helium</p>
+            </div>
+        </div>
+
+        <div class="use-nav">
+            <div class="use-nav-content">
+                <h3>Enterprise</h3>
+                <p>Connect your devices to the Network</p>
+            </div>
+            <div class="use-nav-content">
+                <h3>Roam</h3>
+                <p>Add our coverage to yours</p>
+            </div>
+            <div class="use-nav-content">
+                <h3>Solutions</h3>
+                <p>Discover solutions built on Helium</p>
+            </div>
+            <div class="use-nav-content">
+                <h3>Developer Documentation</h3>
+                <p>Technical information, FAQ and Support</p>
             </div>
         </div>
     </nav>
