--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <nav>
-        <img src="./assets/svg/logosymbol.svg" alt="logosymbol" class="logosymbol" />
+        <a href="./index.html" class="logosymbol"><img src="./assets/svg/logosymbol.svg" alt="logosymbol" /></a>
         <p><a href="#">Chapter 2</a></p>
         <ul>
             <li class="build"><a href="#">Build <img src="./assets/svg/navarrow.svg" alt="Fleche vers le bas" /></a>
@@ -22,10 +22,10 @@
             <li class="use"><a href="#">Use <img src="./assets/svg/navarrow.svg" alt="Fleche vers le bas" /></a></li>
             <li class="resources"><a href="#">Resources <img src="./assets/svg/navarrow.svg"
                         alt="Fleche vers le bas" /></a></li>
-            <li><a href="#">Ecosystem</a></li>
+            <li><a href="#">Who Uses Helium?</a></li>
         </ul>
         <p><a href="#">Cellular Summer</a></p>
-        <img src="./assets/svg/globe.svg" alt="globe" class="globe" />
+        <div class="globe"><img src="./assets/svg/globe.svg" alt="globe" /></div>
 
         <div class="build-nav">
             <div class="build-nav-content">
@@ -34,7 +34,7 @@
             </div>
             <div class="build-nav-content">
                 <h3>Stake</h3>
-                <p>Eun a Validator and secure the Network</p>
+                <p>Run a Validator and secure the Network</p>
             </div>
             <div class="build-nav-content">
                 <h3>Token</h3>
@@ -64,7 +64,37 @@
                 <p>Technical information, FAQ and Support</p>
             </div>
         </div>
+
+        <div class="resources-nav">
+            <div class="resources-nav-content">
+                <h3>Blog</h3>
+                <p>Read our news and announcements</p>
+            </div>
+            <div class="resources-nav-content">
+                <h3>Helium Explorer</h3>
+                <p>Blockchain and Network Map</p>
+            </div>
+            <div class="resources-nav-content">
+                <h3>Community</h3>
+                <p>Join the Heliumm Discord</p>
+            </div>
+        </div>
+
+        <div class="globe-nav">
+            <p><a href="#">English</a></p>
+            <p><a href="#">Français</a></p>
+            <p><a href="#">Italiano</a></p>
+            <p><a href="#">Deutsche</a></p>
+            <p><a href="#">Espanol</a></p>
+            <p><a href="#">Nederlands</a></p>
+            <p><a href="#">русский</a></p>
+            <p><a href="#">中文</a></p>
+            <p><a href="#">日本語</a></p>
+            <p><a href="#">한국어</a></p>
+        </div>
     </nav>
+
+
 
     <script src="./assets/scripts/index.js"></script>
 </body>
