correction navbar javascript + header

--- a/index.html
+++ b/index.html
@@ -17,10 +17,12 @@
         <a href="./index.html" class="logosymbol"><img src="./assets/svg/logosymbol.svg" alt="logosymbol" /></a>
         <p><a href="#">Chapter 2</a></p>
         <ul>
-            <li class="build"><a href="#">Build <img src="./assets/svg/navarrow.svg" alt="Fleche vers le bas" /></a>
+            <li class="build"><a href="#" onclick="return false">Build <img src="./assets/svg/navarrow.svg"
+                        alt="Fleche vers le bas" /></a>
             </li>
-            <li class="use"><a href="#">Use <img src="./assets/svg/navarrow.svg" alt="Fleche vers le bas" /></a></li>
-            <li class="resources"><a href="#">Resources <img src="./assets/svg/navarrow.svg"
+            <li class="use"><a href="#" onclick="return false">Use <img src="./assets/svg/navarrow.svg"
+                        alt="Fleche vers le bas" /></a></li>
+            <li class="resources"><a href="#" onclick="return false">Resources <img src="./assets/svg/navarrow.svg"
                         alt="Fleche vers le bas" /></a></li>
             <li><a href="#">Who Uses Helium?</a></li>
         </ul>
@@ -95,6 +97,28 @@
     </nav>
 
 
+    <div class="click-body">
+        <header>
+            <div class="header-left">
+                <div class="header-left-content">
+                    <div class="hotspots"><span><strong>Cellular Summer is here!</strong> Get your 5G Hotspots
+                        </span><img src="./assets/svg/roadmaparrowwhite.svg" alt=""></div>
+                    <h1>People-Powered Networks.</h1>
+                    <h3>Start a Wireless Revolution</h3>
+                    <p>Powered by the Helium Blockchan, The People's Network represents a paradigm shift for
+                        decentralized
+                        wireless infrastucutre.</p>
+                    <div class="header-buttons">
+                        <button>Mine</button>
+                        <button>Stake</button>
+                        <button>Use</button>
+                    </div>
+                </div>
+            </div>
+            <div class="header-right">
+            </div>
+        </header>
+    </div>
 
     <script src="./assets/scripts/index.js"></script>
 </body>
