superpositions images vg header

--- a/index.html
+++ b/index.html
@@ -109,13 +109,19 @@
                         decentralized
                         wireless infrastucutre.</p>
                     <div class="header-buttons">
-                        <button>Mine</button>
-                        <button>Stake</button>
-                        <button>Use</button>
+                        <button class="button-blue">Mine</button>
+                        <button class="button-purple">Stake</button>
+                        <button class="button-green">Use</button>
                     </div>
                 </div>
             </div>
             <div class="header-right">
+                <img src="./assets/img/base.png" alt="base" class="base">
+                <div class="div-lignes">
+                    <img src="./assets/svg/linesnon.svg" alt="Lignes vertes" class="ligns">
+                </div>
+                <img src="./assets/img/topmain.png" alt="Topmain" class="topmain">
+                <img src="./assets/svg/marker1.svg" alt="Marker" class="marker">
             </div>
         </header>
     </div>
