Boutons header -> liens + Section news terminée

--- a/index.html
+++ b/index.html
@@ -102,16 +102,16 @@
             <div class="header-left">
                 <div class="header-left-content">
                     <div class="hotspots"><span><strong>Cellular Summer is here!</strong> Get your 5G Hotspots
-                        </span><img src="./assets/svg/roadmaparrowwhite.svg" alt=""></div>
+                        </span><img src="./assets/svg/roadmaparrowwhite.svg" alt="svg"></div>
                     <h1>People-Powered Networks.</h1>
                     <h3>Start a Wireless Revolution</h3>
                     <p>Powered by the Helium Blockchan, The People's Network represents a paradigm shift for
                         decentralized
                         wireless infrastucutre.</p>
                     <div class="header-buttons">
-                        <button class="button-blue">Mine</button>
-                        <button class="button-purple">Stake</button>
-                        <button class="button-green">Use</button>
+                        <a href="#" target="_blank" class="button header-blue">Mine</a>
+                        <a href="#" target="_blank" class="button header-purple">Stake</a>
+                        <a href="#" target="_blank" class="button header-green">Use</a>
                     </div>
                 </div>
             </div>
@@ -175,16 +175,17 @@
                     <div class="network-live">
                         <h2>The Network is Live</h2>
                         <p>The People's Network is the world's fastest growing wireless network ever.</p>
-                        <button class="network-btn">View Network Coverage</button>
+                        <a href="https://explorer.helium.com/" target="_blank" class="network-btn">View Network
+                            Coverage</a>
                     </div>
                     <div class="network-numbs">
                         <div class="numbs-content">
                             <h4>Total Hotspots</h4>
-                            <h3>924 642</h3>
+                            <h3>926 597</h3>
                         </div>
                         <div class="numbs-content">
                             <h4>Circulating hnt Supply</h4>
-                            <h3>125 565 507</h3>
+                            <h3>125 743 043</h3>
                         </div>
                     </div>
                 </div>
