Commencement de la deuxieme section + boutons

--- a/index.html
+++ b/index.html
@@ -191,6 +191,39 @@
                 </div>
             </div>
         </div>
+
+        <div class="section-mine">
+            <div class="mine-bandereau">
+                <img src="./assets/svg/minetri.svg" alt="Rien">
+            </div>
+            <div class="mine-content">
+                <div class="mine-content-top">
+                    <div class="mine-content-left">
+                        <h2>Mine.</h2>
+                        <h3>A New Way to Mine Crypto</h3>
+                        <p>By deploying a simple device in your home or office, you can provide your city with miles of
+                            low-power network coverage for billions of devices and earn a new cryptocurrency, HNT.</p>
+                        <a href="https://www.helium.com/mine" class="network-btn">Learn More</a>
+                    </div>
+                    <div class="mine content-right"><img src="./assets/img/miner4.png" alt="Miner"></div>
+                </div>
+                <div class="mine-content-bottom">
+                    <div class="mine-content-section">
+                        <h4>Bye Bye GPU Mining</h4>
+                        <p>Mining HNT with Hotspots is done via radio technology, not expensive or wasteful GPUs.</p>
+                    </div>
+                    <div class="mine-content-section">
+                        <h4>Build Networks</h4>
+                        <p>Hotspots work together to form a new global wireless network and undertake
+                            'Proof-of-Coverage'.</p>
+                    </div>
+                    <div class="mine-content-section">
+                        <h4>Choose your hardware</h4>
+                        <p>Hotspots are built by a variety of vendors to suit your needs.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
     <script src="./assets/scripts/index.js"></script>
