Fin section 2 + début section 3

--- a/index.html
+++ b/index.html
@@ -224,6 +224,67 @@
                 </div>
             </div>
         </div>
+
+        <div class="section-use">
+            <div class="use-content">
+                <img src="./assets/img/useheader.jpg" alt="Userhead" />
+                <h2>Use.</h2>
+                <h3>Massive, Decentralized Connectivity</h3>
+                <p>Hundreds of companies and thousands of developers are already building on The People's Network, the
+                    world's largest, and fastest growing LoRaWAN network.</p>
+                <p>Thousands of existings solutions, sensors, devices and gateways can be easily configured to run
+                    LongFi - a powerful blend of LoRaWAN and blockchain technologies.</p>
+                <div class="div-btn">
+                    <div class="div-use-btn">
+                        <a href="https://www.helium.com/mine" class="network-btn">Use the Network</a>
+                    </div>
+                    <div class="div-use-btn">
+                        <a href="https://www.helium.com/mine" class="network-btn">Build with Helium Console</a>
+                    </div>
+                </div>
+            </div>
+            <div class="use-console">
+                <div class="use-console-second">
+                    <h4>An open alternative</h4>
+                    <p>The People's Network is built on Open Source technology and governed by an open alliance.</p>
+                </div>
+                <div class="use-console-second">
+                    <h4>Scalable & affordable</h4>
+                    <p>Say goodbye to expensive cell contracts. On Helium a sensor can cost cents to run a year.</p>
+                </div>
+                <div class="use-console-second">
+                    <h4>Lorawan-compatible</h4>
+                    <p>Utilize thousands if existing sensors, chipsets and MCUs for streamlined development.</p>
+                </div>
+                <div class="use-console-principal">
+                    <div class="use-console-principal-left">
+                        <h3>Get Started on Helium Console Today</h3>
+                        <p>After many months of work and testing based on community feedback, the team is excited to
+                            announce updates to Console! The team noy only worked on new features and capabilities, but
+                            also focused on making sure migration to the updated Console would be seamless for existing
+                            users.</p>
+                        <p>Read more about Consolde and how to get started <a
+                                href="https://blog.helium.com/console-2-0-is-here-bd25a3aa5ee1">here.</a></p>
+                    </div>
+                    <div class="use-console-principal-right"></div>
+                </div>
+            </div>
+            <div class="use-partnairs">
+                <h4>Helium is used by:</h4>
+                <div class="use-partnairs-logo">
+                    <img src="./assets/svg/agulus.svg" alt="Logo Agulus" />
+                    <img src="./assets/svg/airly.svg" alt="Logo airly" />
+                    <img src="./assets/svg/nowi.svg" alt="Logo nowi" />
+                    <img src="./assets/svg/digitalmatter.svg" alt="Logo digital matter" />
+                    <img src="./assets/svg/lonestar.svg" alt="Logo Lonestar" />
+                    <img src="./assets/svg/open.svg" alt="Logo One Planet" />
+                    <img src="./assets/svg/mydevices.svg" alt="Logo myDevices" />
+                    <img src="./assets/svg/invisileash.svg" alt="Logo InvisiLeash" />
+                    <img src="./assets/svg/careband.svg" alt="Logo careband" />
+                    <img src="./assets/svg/mimiq_black.svg" alt="Logo mimiq" />
+                </div>
+            </div>
+        </div>
     </div>
 
     <script src="./assets/scripts/index.js"></script>
