--- a/index.html
+++ b/index.html
@@ -226,17 +226,19 @@
         </div>
 
         <div class="section-use">
-            <div class="use-content">
+            <div class="use-img">
                 <img src="./assets/img/useheader.jpg" alt="Userhead" />
                 <h2>Use.</h2>
                 <h3>Massive, Decentralized Connectivity</h3>
+            </div>
+            <div class="use-content">
                 <p>Hundreds of companies and thousands of developers are already building on The People's Network, the
                     world's largest, and fastest growing LoRaWAN network.</p>
                 <p>Thousands of existings solutions, sensors, devices and gateways can be easily configured to run
                     LongFi - a powerful blend of LoRaWAN and blockchain technologies.</p>
                 <div class="div-btn">
                     <div class="div-use-btn">
-                        <a href="https://www.helium.com/mine" class="network-btn">Use the Network</a>
+                        <a href="https://www.helium.com/mine" class="network-btn netgreen">Use the Network</a>
                     </div>
                     <div class="div-use-btn">
                         <a href="https://www.helium.com/mine" class="network-btn">Build with Helium Console</a>
@@ -244,19 +246,21 @@
                 </div>
             </div>
             <div class="use-console">
-                <div class="use-console-second">
-                    <h4>An open alternative</h4>
-                    <p>The People's Network is built on Open Source technology and governed by an open alliance.</p>
+                <div class="use-console__container">
+                    <div class="use-console__container--second">
+                        <h4>An open alternative</h4>
+                        <p>The People's Network is built on Open Source technology and governed by an open alliance.</p>
+                    </div>
+                    <div class="use-console__container--second">
+                        <h4>Scalable & affordable</h4>
+                        <p>Say goodbye to expensive cell contracts. On Helium a sensor can cost cents to run a year.</p>
+                    </div>
+                    <div class="use-console__container--second">
+                        <h4>Lorawan-compatible</h4>
+                        <p>Utilize thousands if existing sensors, chipsets and MCUs for streamlined development.</p>
+                    </div>
                 </div>
-                <div class="use-console-second">
-                    <h4>Scalable & affordable</h4>
-                    <p>Say goodbye to expensive cell contracts. On Helium a sensor can cost cents to run a year.</p>
-                </div>
-                <div class="use-console-second">
-                    <h4>Lorawan-compatible</h4>
-                    <p>Utilize thousands if existing sensors, chipsets and MCUs for streamlined development.</p>
-                </div>
-                <div class="use-console-principal">
+                <div class="use-console__principal">
                     <div class="use-console-principal-left">
                         <h3>Get Started on Helium Console Today</h3>
                         <p>After many months of work and testing based on community feedback, the team is excited to
