--- a/index.html
+++ b/index.html
@@ -261,21 +261,21 @@
                     </div>
                 </div>
                 <div class="use-console__principal">
-                    <div class="use-console-principal-left">
+                    <div class="use-console__principal--left">
                         <h3>Get Started on Helium Console Today</h3>
                         <p>After many months of work and testing based on community feedback, the team is excited to
                             announce updates to Console! The team noy only worked on new features and capabilities, but
                             also focused on making sure migration to the updated Console would be seamless for existing
                             users.</p>
                         <p>Read more about Consolde and how to get started <a
-                                href="https://blog.helium.com/console-2-0-is-here-bd25a3aa5ee1">here.</a></p>
+                                href="https://blog.helium.com/console-2-0-is-here-bd25a3aa5ee1">here</a>.</p>
                     </div>
-                    <div class="use-console-principal-right"></div>
+                    <div class="use-console__principal--right"></div>
                 </div>
             </div>
             <div class="use-partnairs">
                 <h4>Helium is used by:</h4>
-                <div class="use-partnairs-logo">
+                <div class="use-partnairs__logo">
                     <img src="./assets/svg/agulus.svg" alt="Logo Agulus" />
                     <img src="./assets/svg/airly.svg" alt="Logo airly" />
                     <img src="./assets/svg/nowi.svg" alt="Logo nowi" />
