--- a/index.html
+++ b/index.html
@@ -289,6 +289,46 @@
                 </div>
             </div>
         </div>
+
+        <div class="section-techno">
+            <div class="section-techno_container">
+                <div class="section-techno_container__header">
+                    <h2>Core Technologies.</h2>
+                    <p>The People's Network is made possible through sophisticated, open-source technologies that aim to
+                        create a truly decentralized and trust-less model for building wireless infrastucture.</p>
+                </div>
+                <div class="section-techno_container__info">
+                    <div class="section-techno_container__info--content">
+                        <a href="#" target="_blank" class="section-techno_container__info--content_img">
+                            <img src="./assets/svg/core1.svg" alt="Core">
+                        </a>
+                        <a href="#" target="_blank" class="section-techno_container__info--content_text">
+                            <h5>Tokens & Data Credits</h5>
+                            <p>The network uses two units of exchange: HNT, a new cryptocurrency, and Data Credits.</p>
+                        </a>
+                    </div>
+                    <div class="section-techno_container__info--content">
+                        <a href="#" target="_blank" class="section-techno_container__info--content_img">
+                            <img src="./assets/svg/core2.svg" alt="Core">
+                        </a>
+                        <a href="#" target="_blank" class="section-techno_container__info--content_text">
+                            <h5>Proof-of-Coverage</h5>
+                            <p>Our novel proof-of-work algorithm enables Hotspots to be rewarded trustlessly.</p>
+                        </a>
+                    </div>
+                    <div class="section-techno_container__info--content">
+                        <a href="#" target="_blank" class="section-techno_container__info--content_img">
+                            <img src="./assets/svg/core3.svg" alt="Core">
+                        </a>
+                        <a href="#" target="_blank" class="section-techno_container__info--content_text">
+                            <h5>Helium LongFi</h5>
+                            <p>LongFi combines the low-power, long-range LoRaWAN wireless protocol with the Helium
+                                Blockchain.</p>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 
     <script src="./assets/scripts/index.js"></script>
