Commencement du footer

--- a/index.html
+++ b/index.html
@@ -329,6 +329,85 @@
                 </div>
             </div>
         </div>
+
+        <footer>
+            <div class="footer-top">
+                <div class="footer-top__container">
+                    <div class="footer-top__container--mail">
+                        <div class="footer-top__container--mail_left">
+                            <h3>Get Ecosystem Updates to Your Inbox</h3>
+                        </div>
+                        <div class="footer-top__container--mail_right">
+                            <form action="#">
+                                <input type="mail" placeholder="e.g. hello@helium.com" class="text-mail" />
+                                <input type="submit" value="Join Mailing List" class="button-mail" />
+                            </form>
+                        </div>
+                    </div>
+                    <div class="footer-top__container--index">
+                        <div class="footer-top__container--index_categorie">
+                            <h5>Learn</h5>
+                            <ul>
+                                <li><a href="#">Home</a></li>
+                                <li><a href="#">Chapter 2</a></li>
+                                <li><a href="#">Ecosystem</a></li>
+                                <li><a href="#">Solutions</a></li>
+                                <li><a href="#">Console</a></li>
+                                <li><a href="#">Brand Guidelines</a></li>
+                                <li><a href="#">Blog</a></li>
+                                <li><a href="#">Whitepaper</a></li>
+                            </ul>
+                        </div>
+                        <div class="footer-top__container--index_categorie">
+                            <h5>Get involved</h5>
+                            <ul>
+                                <li><a href="#">Mine</a></li>
+                                <li><a href="#">Stake</a></li>
+                                <li><a href="#">Use</a></li>
+                                <li><a href="#">Roam</a></li>
+                                <li><a href="#">Switch from 3G</a></li>
+                                <li><a href="#">HNT and Data Credits</a></li>
+                                <li><a href="#">DEveloppers</a></li>
+                            </ul>
+                        </div>
+                        <div class="footer-top__container--index_categorie">
+                            <h5>Social</h5>
+                            <ul>
+                                <li><a href="#">Discord</a></li>
+                                <li><a href="#">Twitter</a></li>
+                                <li><a href="#">Facebook</a></li>
+                                <li><a href="#">LinkedIn</a></li>
+                                <li><a href="#">Github</a></li>
+                                <li><a href="#">Telegram</a></li>
+                                <li><a href="#">YouTube</a></li>
+                                <li><a href="#">Reddit</a></li>
+                                <li><a href="#">Instagram</a></li>
+                            </ul>
+                        </div>
+                        <div class="footer-top__container--index_categorie">
+                            <h5>Get in touch</h5>
+                            <ul>
+                                <li><a href="#">hello@helium.com</a></li>
+                                <li><a href="#">press@helium.com</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="footer-top__container--logo">
+                        <img src="./assets/svg/logo-horizontalwhite.svg" alt="Logo Helium" />
+                    </div>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <div class="footer-bottom__container">
+                    <ul>
+                        <li><a href="#">Privacy Policy</a></li>
+                        <li><a href="#">Hotspot Limited Warranty</a></li>
+                        <li><a href="#">Website Terms</a></li>
+                        <li><a href="#">Terms and Conditions</a></li>
+                    </ul>
+                </div>
+            </div>
+        </footer>
     </div>
 
     <script src="./assets/scripts/index.js"></script>
